# rust-compress

./: .travis.yml  Cargo.toml  Makefile  README.md  adler32.rs  bwt.rs  dc.rs  flate.rs  index.html  lib.rs  lz4.rs  main.rs  search-index.js  zlib.rs
bwt/: dc.rs  mod.rs  mtf.rs
compress/: index.html  stability.html  stability.json
compress/bwt/: fn.compute_inversion_table.html  fn.compute_suffixes.html  fn.decode.html  fn.decode_simple.html  fn.encode.html  fn.encode_simple.html  index.html  static.ALPHABET_SIZE.html  struct.Decoder.html  struct.Encoder.html  struct.InverseIterator.html  struct.Radix.html  struct.TransformIterator.html  type.Symbol.html
compress/bwt/dc/: fn.decode.html  fn.decode_simple.html  fn.encode.html  fn.encode_simple.html  index.html  static.TOTAL_SYMBOLS.html  struct.Context.html  struct.EncodeIterator.html  type.Rank.html  type.Symbol.html
compress/bwt/mtf/: index.html  static.TOTAL_SYMBOLS.html  struct.Decoder.html  struct.Encoder.html  struct.MTF.html  type.Rank.html  type.Symbol.html
compress/checksum/: index.html
compress/entropy/: index.html
compress/flate/: index.html  struct.Decoder.html
compress/lz4/: fn.decode_block.html  index.html  struct.Decoder.html  struct.Encoder.html
compress/zlib/: index.html  struct.Decoder.html
data/: test.bwt  test.large.z.5  test.lz4.2  test.txt  test.z.3  test.z.4  test.z.6  test.z.7
entropy/: ari.rs
entropy/ari/: apm.rs  bin.rs  mod.rs  table.rs  test.rs
post_bwt/: mtf.rs
src/: flate.rs  lib.rs  lz4.rs  main.rs  rle.rs  zlib.rs
src/bwt/: dc.rs  mod.rs  mtf.rs
src/checksum/: adler.rs
src/data/: test.lz4.5  test.z.0  test.z.1  test.z.2  test.z.5  test.z.go
(+34 files in other folders)
