[package]

name = "compress"
description = "Various compression algorithms written in rust"
repository = "https://github.com/acrichto/rust-compress"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Dzmitry Malyshau <kvarkus@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
default = ["bwt", "checksum", "entropy", "flate", "lz4", "zlib", "rle"]
bwt = []
checksum = []
entropy = []
flate = []
lz4 = []
zlib = []
rle = []
unstable = []

[[bin]]
name = "compress"
doc = false

[dependencies]
log = "*"
num = "*"
rand = "*"
byteorder = "*"
